<resources>
    <string name="app_name">To Do List</string>
    <string name="button_add">Add task</string>
    <string name="write_new_task">Write a new task</string>
    <string name="button_delete">Delete task</string>
    <string name="button_add_desc">Add new item</string>
    <string name="home_title">Home</string>
    <string name="user_title">User</string>
    <string name="button_desc">Add</string>
    <string name="completed_title">Completed Tasks</string>
    <string name="email">Email</string>
    <string name="login_button">Login</string>
    <string name="login_password">Password</string>
    <string name="logout_button">Logout</string>
    <string name="alter_dialog_task">Insert new task name</string>
    <string name="alter_dialog_category">Insert category name</string>
    <string name="alter_dialog_title">Update or delete task</string>
    <string name="cancel_button">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="update_button">Update</string>
    <string name="signup">Sign up</string>
    <string name="forgotten_password">Forgotten password?</string>
    <string name="signup_confirm">Confirm password</string>
    <string name="have_an_account">Already have an account? Log in</string>
    <string name="delete_account">Delete Account</string>
    <string name="reset_password">Reset password</string>
    <string name="fillout_all_fields">Wszystkie pola muszą być wypełnione</string>
    <string name="login_successful">Zalogowano pomyślnie</string>
    <string name="confirm_email">Musisz potwierdzic email</string>
    <string name="login_error">Błąd podczas logowania</string>
    <string name="signup_successful">Rejestracja powiodła się</string>
    <string name="signup_unsuccessful">Rejestracja nie powiodła się</string>
    <string name="passwords_dont_match">Hasła się nie zgadzają</string>
    <string name="are_you_sure">Na pewno chcesz usunąć konto??</string>
    <string name="email_sent">Email został wysłany</string>
    <string name="reauthentication_needed">Musisz się zalogować ponownie</string>
    <string name="delete_error">Wystąpił błąd podczas usuwania</string>
    <string name="account_deleted">Konto usunięte</string>
    <string name="invalid_credentials">Wprowadz poprawne dane</string>
    <string name="password_changed">Hasło zostało zmienione</string>
    <string name="error">Wystąpił błąd</string>
    <string name="send">Send</string>
</resources>