<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    >

    <EditText
        android:id="@+id/alter_dialog_edit_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:hint="@string/alter_dialog_task"
        android:inputType="text"
        android:padding="8dp"
        app:flow_horizontalAlign="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <EditText-->
<!--        android:id="@+id/alter_dialog_edit_category"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:hint="@string/alter_dialog_category"-->
<!--        android:inputType="text"-->
<!--        android:padding="8dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/alter_dialog_edit_name" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/alter_dialog_edit_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/button_dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:textSize="11sp"
            android:text="@string/cancel_button"/>

        <Button
            android:id="@+id/button_dialog_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="11sp"
            android:layout_marginEnd="4dp"
            android:text="@string/delete_button" />

        <Button
            android:id="@+id/button_dialog_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="11sp"
            android:text="@string/update_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>